--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fernando Poli - Rick and Morty Call API.</title>
+  <title>Fernando Poli - Rick and Morty Call API. [TEST]</title>
 </head>
 
 <body class="bg-gray-900">
